upgraded @lir-portal/web-components and fixed issue with z-index

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -3,3 +3,7 @@
         background-color: #f7f7fa;
     }
 }
+.layout-overrides {
+    --layout-layer-top: 1000;
+    --layout-layer-overlay: 2000;
+}
